k8s/domains/tenancy/infra/api/base/tenancy-api-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tenancy-api-depl
spec:
  selector:
    matchLabels:
      app: tenancy-api
  replicas: 3
  template:
    metadata:
      labels:
        app: tenancy-api
    spec:
      terminationGracePeriodSeconds: 15
      serviceAccountName: tenancy-api
      # Defense in deep, disable this at the pod level
      # to prevent overwrites at the service account level
      automountServiceAccountToken: false

      containers:
        - name: tenancy-api
          image: mdstaicu/tenancy-api
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2

          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 2
