k8s/domains/tenancy/infra/api/base/tenancy-api-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: tenancy-api-public
spec:
  entryPoints:
    - https

  routes:
    - kind: Rule
      match: Host(`api.tma.com`) && PathPrefix(`/v1/tenants`)
      middlewares:
        - name: tenancy-api-public
      services:
        - name: tenancy-api-srv
          port: 3000
  tls: {}

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: tenancy-api-public-docs
spec:
  entryPoints:
    - https

  routes:
    - kind: Rule
      match: Host(`api.tma.com`) && PathPrefix(`/v1/tenants/docs`)
      middlewares:
        - name: tenancy-api-public-docs
      services:
        - name: tenancy-api-srv
          port: 3000
  tls: {}

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: tenancy-api-internal
spec:
  entryPoints:
    - http

  routes:
    - kind: Rule
      match: PathPrefix(`/v1/tenants`)
      services:
        - name: tenancy-api-srv
          port: 3000
