k8s/domains/tenancy/infra/api/base/tenancy-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-tenancy-api
spec:
  podSelector:
    matchLabels:
      app: tenancy-api
  policyTypes:
    - Ingress
    - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-tenancy-api-dns
spec:
  podSelector:
    matchLabels:
      app: tenancy-api
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-traefik-to-tenancy-api
spec:
  podSelector:
    matchLabels:
      app: tenancy-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app: traefik
      ports:
        - protocol: TCP
          port: 3000

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-tenancy-api-to-traefik
spec:
  podSelector:
    matchLabels:
      app: tenancy-api
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app: traefik
      ports:
        - protocol: TCP
          port: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-tenancy-api-to-postgres
spec:
  podSelector:
    matchLabels:
      app: tenancy-api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: tenancy-postgres
      ports:
        - protocol: TCP
          port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-tenancy-api-to-otel
spec:
  podSelector:
    matchLabels:
      app: tenancy-api
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: otel
          podSelector:
            matchLabels:
              app: otel-collector
      ports:
        - protocol: TCP
          port: 4318
